--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-size: border-box;
+}
 body {
     background-image: url('https://cdn.pixabay.com/photo/2017/01/08/13/24/scrapbook-1962913_960_720.jpg');
     background-size: auto 100vh;
     height: 100vh;
     font-family: Arial;
   }
-  
+
   .menu {
     background-color: white; 
   }
@@ -16,7 +21,7 @@ body {
   a:hover {
     text-decoration: underline;
   }
-  .menu li {
+  .menu li { 
     list-style: none;
   }
   .site-title,.site-subtitle {
@@ -28,8 +33,14 @@ body {
     text-decoration: none;
     font-style: italic;
   }
-  
+
   .menu ul{
     display: flex;
     justify-content: space-around;
+  }
+.img-portfolio{
+  width: 100px
+  height: 100px
+
+}
   }
